[package]
name = "listeners"
version = "0.3.0"
edition = "2024"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
description = "Cross-platform library to find out processes listening on network sockets"
readme = "README.md"
repository = "https://github.com/GyulyVGC/listeners"
license = "MIT"
keywords = ["listen", "port", "process", "socket", "pid"]
categories = ["network-programming"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "examples/**/*"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.1", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
byteorder = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = {version = "1.0.8", features = ["fs"]}

#[target.'cfg(all(not(target_os = "linux"), not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
#bsd-kvm = "0.1.5"
#sysctl = "0.5.5"

[dev-dependencies]
http-test-server = "2.1.1"
serial_test = "3.2.0"
