[package]
name = "listeners"
version = "0.4.0"
edition = "2024"
rust-version = "1.91"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
description = "Cross-platform library to find out processes listening on network ports"
readme = "README.md"
repository = "https://github.com/GyulyVGC/listeners"
license = "MIT"
keywords = ["listen", "port", "process", "socket", "pid"]
categories = ["network-programming"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "examples/**/*"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
byteorder = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = {version = "1.1", features = ["fs"]}

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "freebsd")'.build-dependencies]
cc = "1.2"

[dev-dependencies]
http-test-server = "2.1.1"
serial_test = "3.3.1"
criterion = "0.8.2"
serde_json = "1.0.149"
rand = "0.10.0"

[[bench]]
name = "get_all"
harness = false

[[bench]]
name = "get_process_by_active_port"
harness = false

[[bench]]
name = "get_process_by_inactive_port"
harness = false
